--- a/css/styles.css
+++ b/css/styles.css
@@ -52,13 +52,25 @@ html,body {
     color:#dc5d54;
 }
 
-
-
 .navbar-trans .form-control:focus {
 	border-color: #eee;
 	outline: 0;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
+}
+
+.navmenu-bg {
+	background: #36363d;
+	color: white;
+	border-color: transparent;
+}
+
+.navmenu-bg a {
+	color: white !Important;
+}
+
+.side-menu-button {
+	font-size: 1.5em;
 }
 
 section {
@@ -81,6 +93,7 @@ section {
 
 .equal-sign-font {
 	font-size: 5em;
+	color: lightseagreen;
 }
 
 .navbar-font-size {
