--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,20 @@ html,body {
     background-size: cover;
 }
 
+.black-overlay {
+	content: " ";
+	display: block;
+	background: #5b5b67;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: 9999;
+	opacity: 0.3;
+}
+
 .icon-bar {
 	background-color:#fff;
 }
@@ -73,6 +87,13 @@ html,body {
 
 .side-menu-button {
 	font-size: 1.5em;
+	cursor: pointer;
+}
+
+.exit-button {
+	font-size: 1.5em;
+	cursor: pointer;
+	margin-left: 80%;
 }
 
 section {
