--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,28 @@ html,body {
 		height:100%;
 	}
 }
+
+img {
+	width: 100%;
+}
+
+.sec1-img2{
+	width: 79%;
+}
+
+.sec1-img3{
+	margin-bottom: 10%;
+}
+
+.sec2-img{
+	width: 80%;
+}
+
+.sec3-img{
+	width: 25%;
+}
+
+
 .black-overlay {
 	content: " ";
 	display: block;
@@ -107,7 +129,7 @@ section {
 }
 
 .v-center {
-    padding-top:10%;
+    padding-top:5%;
     font-size:3em;
 		color: white;
 }
@@ -143,8 +165,9 @@ a.list-group-item.active,[class*='-info'] {
 }
 
 #section3 {
-	background-color: #168ccc;
-    color:#ddd;
+	background-color: #eef3f7;
+  color:#1382c7;
+	font-size: 1em;
 }
 
 #section4 {
@@ -160,6 +183,20 @@ a.list-group-item.active,[class*='-info'] {
 #section6 {
 	background-color: #168ccc;
     color:#ddd;
+}
+
+.video-container {
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
+}
+.video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 footer {
